force-app/main/default/objects/GTM_Instrument_Question_Definition__c/GTM_Instrument_Question_Definition__c.object-meta.xml
<CustomObject>
    <label>GTM Instrument Question Definition</label>
    <pluralLabel>GTM Instrument Question Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Question Number</label>
        <displayFormat>IQD-{0000}</displayFormat>
    </nameField>
</CustomObject>