force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/GTM_Instrument_Definition__c.field-meta.xml
<CustomField>
    <fullName>GTM_Instrument_Definition__c</fullName>
    <label>GTM Instrument Definition</label>
    <description>The parent instrument definition this question belongs to.</description>
    <referenceTo>GTM_Instrument_Definition__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>