force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <description>Upper bound of the scale for a Numeric_Scale question. Ignored for other Question_Type__c values.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>