force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min Value</label>
    <description>Lower bound of the scale for a Numeric_Scale question. Ignored for other Question_Type__c values.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>