force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Options_JSON__c.field-meta.xml
<CustomField>
    <fullName>Options_JSON__c</fullName>
    <label>Options JSON</label>
    <description>JSON payload of this question's answer options and per-option points, shaped per Question_Type__c -- see docs/architecture/gtm-instrument-schema.md section 3.1 for the full contract consumed by sub-issue 02/03 (Apex/rule engine) and sub-issue 04 (gtmInstrumentAuthor LWC).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>