force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <label>Question Key</label>
    <description>Stable slug key for this question, referenced by other questions' Rules_JSON__c conditions/targets (e.g. branching rules point at this key, not the record Id, so rules survive record recreation/reordering).</description>
    <type>Text</type>
    <length>100</length>
</CustomField>