force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <description>Input control this question renders as. Drives how Options_JSON__c is shaped and interpreted -- see docs/architecture/gtm-instrument-schema.md section 3.1.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single_Select</fullName><label>Single Select</label><default>true</default></value>
            <value><fullName>Multi_Select</fullName><label>Multi Select</label><default>false</default></value>
            <value><fullName>Dropdown</fullName><label>Dropdown</label><default>false</default></value>
            <value><fullName>Numeric_Scale</fullName><label>Numeric / Maturity Scale</label><default>false</default></value>
            <value><fullName>Matrix_Grid</fullName><label>Matrix / Grid</label><default>false</default></value>
            <value><fullName>Short_Text</fullName><label>Short Text</label><default>false</default></value>
            <value><fullName>Long_Text</fullName><label>Long Text</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>