force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <description>Whether a guest must answer this question before proceeding. Can be flipped to true at runtime by a MAKE_REQUIRED branching rule (see Rules_JSON__c) even when authored false.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>