force-app/main/default/objects/GTM_Instrument_Question_Definition__c/fields/Slot_Order__c.field-meta.xml
<CustomField>
    <fullName>Slot_Order__c</fullName>
    <label>Slot Order</label>
    <description>Display/authoring order of this question within its parent instrument definition. Ties are not guaranteed to resolve deterministically.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>